<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp">

    <ImageView
        android:id="@+id/imgLogoSplash"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/logo"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvTituloBienvenida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/welcome_title"
        android:textColor="@color/md_theme_primary"
        android:textSize="28sp"
        android:textStyle="bold"
        tools:text="Bienvenido" />

    <TextView
        android:id="@+id/tvSubtitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/welcome_subtitle"
        android:textColor="@color/gray_soft"
        android:textSize="14sp"
        tools:text="Explora destinos increíbles" />
</LinearLayout>